manifests/media/torrent.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qbittorrent
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      containers:
        - name: gluetun
          image: qmcgaw/gluetun
          securityContext:
            capabilities:
              add: ["NET_ADMIN"]
          ports:
            - containerPort: 8080

        - name: qbittorrent
          image: lscr.io/linuxserver/qbittorrent:latest
          volumeMounts:
            - name: media-storage
              mountPath: /downloads
              subPath: downloads
            - name: media-storage
              mountPath: /config
              subPath: config
      volumes:
        - name: media-storage
          persistentVolumeClaim:
            claimName: media-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
  namespace: media
spec:
  selector:
    app: qbittorrent
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbittorrent
  namespace: media
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - torrent.rupan.dev
      secretName: qbittorrent-tls
  rules:
    - host: torrent.rupan.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: qbittorrent
                port:
                  number: 80
